Updates in flow
