# src/app.js
@@ -2,14 +2,17 @@ const express = require("express");
 const swaggerUi = require("swagger-ui-express");
 const YAML = require("yamljs");
 const path = require("path");
+require('dotenv').config();
 
 const app = express();
-const PORT = 3001;
+const PORT = process.env.PORT || 3000;
 
 const cors = require('cors')
+
+const paymentController = require('./controllers/paymentController.js');
+app.post('/webhook', express.raw({type: "application/json"}), paymentController.confirmOrder);
+
 const myRoute = require('./routes/routes.js');
-
-
 app.use(express.json({ limit: '50mb' }));
 app.use(express.urlencoded({ extended: true }));
 
@@ -19,7 +22,7 @@ app.use(
       methods: ["GET", "POST", "PUT", "PATCH", "DELETE"],
     })
   );
-app.use('/api', myRoute);
+app.use('/', myRoute);
 
 app.get('/', async (req, res) => {
     console.info("/health api called at", new Date().toISOString());
